# Pimusic

./: .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  _config.yml  cmdline.txt  install-services.sh  install.sh  update-services.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
bluetooth-player/: bluetooth-player.service  bluetooth-udev  start.sh
docs/: README.md
shairport-sync/: CAR INSTALL.md  CONTRIBUTING.md  COPYING  CYGWIN.md  FEDORA.md  FREEBSD.md  INSTALL.md  LIBSOXR.md  LICENSES  Makefile.am  NEWS  OPENBSD.md  README.md  RELEASENOTES.md  TROUBLESHOOTING.md  UPDATING.md  activity_monitor.c  activity_monitor.h  alac.c  alac.h  apple_alac.cpp  apple_alac.h  audio.c  audio.h  audio_alsa.c  audio_ao.c  audio_dummy.c  audio_jack.c  audio_pa.c  audio_pipe.c  audio_sndio.c  audio_soundio.c  audio_stdout.c  common.c  common.h  configure.ac  dacp.c  dacp.h  dbus-service.c  dbus-service.h  (+29 more)
shairport-sync/FFTConvolver/: AudioFFT.cpp  FFTConvolver.cpp  FFTConvolver.h  Utilities.cpp  Utilities.h  convolver.cpp  convolver.h
shairport-sync/documents/: sample dbus commands
shairport-sync/man/: Makefile.am  shairport-sync.7  shairport-sync.7.xml  shairport-sync.html  xmltoman.css  xmltoman.dtd  xmltoman.xsl
shairport-sync/scripts/: shairport-sync-config  shairport-sync-dbus-policy-cygwin.conf  shairport-sync-dbus-policy.conf  shairport-sync-mpris-policy-cygwin.conf  shairport-sync-mpris-policy.conf  shairport-sync.conf  shairport-sync.freebsd  shairport-sync.in  shairport-sync.service.in
shairport-sync/tinyhttp/: header.c  http.c
tinyhttp/: LICENSE  README.md  chunk.c  chunk.h  example.cpp  header.h  http.h
